# mcp-sql-result-guard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.ja.md  README.md  SECURITY.md  pyproject.toml
.bootstrap/: chunk_00  chunk_01  chunk_02  chunk_03
.github/workflows/: bootstrap.yml  test.yml
docs/: architecture.md  insert-policy.md  limitations.md  test-report.md
docs/ja/: insert-policy.md  manual.md
examples/: README.md
examples/codex/: config.toml  run-sql-guard.ps1
examples/rules/: sensitive_columns.tsv
scripts/: generate_scenarios.py  run_scenarios.py
src/mcp_sql_result_guard/: __init__.py  __main__.py  default_rules.tsv  guard.py
tests/: conftest.py  test_hook_integration.py  test_insert_policy.py  test_policy_edges.py  test_rule_loader.py  test_scenarios.py
tests/data/: insert_scenarios.tsv  rules_one.tsv  rules_two.tsv  sql_scenarios.tsv
